# libYGP

./: .gitignore  AUTHORS  CREDITS  ChangeLog  INSTALL  Make.bat  Makefile.am  NEWS  README  README.windows  acconfig.h  config.h  configure.ac  configure.in  ygp-cfg.h.in
.github/workflows/: workflow.yml
CGP/: CDirSrch.idl  CGP.pc.in  CIDirSrch.cpp  CIDirSrch.h  DirSrch.idl  Makefile.in  Version.cpp
CGP/Tests/: Local.cpp  Makefile.in  RFile.cpp  Remote.cpp
Windows/: BCGeneral.mak  Test.mak  VCGeneral.def  VCGeneral.dsp  VCGeneral.dsw  VCGeneral.mak  VCTests.dsp  VCTests.mak  ygp-cfg.h
XGP/: AnimWindow.cpp  AnimWindow.h  AutoContainer.cpp  AutoContainer.h  BrowserDlg.cpp  BrowserDlg.h  ConnectDlg.cpp  ConnectDlg.h  EnumEntry.cpp  EnumEntry.h  Folder.cpp  Folder.h  GTKViewer.c  GTKViewer.h  GtkMozViewer.c  GtkMozViewer.h  HTMLViewer.cpp  HTMLViewer.h  LoginDlg.cpp  LoginDlg.h  Makefile.am  MessageDlg.cpp  MessageDlg.h  SearchDlg.cpp  SearchDlg.h  TraceDlg.cpp  TraceDlg.h  Version.cpp  WebkitViewer.c  WebkitViewer.h  XAbout.cpp  XAbout.h  XApplication.cpp  XApplication.h  XAttrEntry.h  XAttrLabel.h  XAttrSpin.h  XAttribute.h  XDate.cpp  XDate.h  (+14 more)
XGP/Icons/: Icon_cpp.xpm  Icon_dvi.xpm  Icon_htm.xpm  Icon_man.xpm  Icon_pdf.xpm  Icon_ps.xpm  Icon_rpm.xpm  Icon_tex.xpm  Icon_tgz.xpm  Icon_txt.xpm  Icon_wav.xpm  Icon_xpm.xpm  Makefile.in
XGP/Samples/: .gitignore  AnimWindow.cpp  AnimWindow.h  Dialog.cpp  Dialog.h  Makefile.am  X-Appl.cpp  X-Appl.h  images.h
YGP/: AByteArray.cpp  AByteArray.h  ADate.cpp  ADate.h  ANumeric.cpp  ANumeric.h  ATStamp.cpp  ATStamp.h  ATime.cpp  ATime.h  AYear.cpp  AYear.h  AssParse.cpp  AssParse.h  AttrParse.cpp  AttrParse.h  AttrVal.h  Attribute.cpp  Attribute.h  CRegExp.cpp  CRegExp.h  Check.cpp  Check.h  ConnMgr.cpp  ConnMgr.h  DirSrch.cpp  DirSrch.h  DynTrace.cpp  DynTrace.h  Entity.cpp  Entity.h  Exception.h  File.cpp  File.h  FileRExp.cpp  FileRExp.h  FileTypeChk.cpp  FileTypeChk.h  Handle.cpp  Handle.h  (+61 more)
YGP/Tests/: .gitignore  AByteArray.cpp  ADate.cpp  ANumeric.cpp  ATStamp.cpp  ATime.cpp  AYear.cpp  AssParse.cpp  AttrParse.cpp  Attribute.cpp  CRegExp.cpp  CRegExp.test  DirSrch.cpp  Entity.cpp  FileRExp.cpp  FileTypeChk.cpp  Handle.cpp  INIFile.cpp  INIFile.test  IVIOAppl.cpp  Makefile.am  MetaEnum.cpp  Module.cpp  Parse.cpp  Parser.test  PathDirSrch.cpp  PathSrch.cpp  Process.cpp  Relation.cpp  SortDirSrch.cpp  Test.h  Thread.cpp  Tokenize.cpp  XStrBuf.cpp  XStream.cpp
doc/: AByteArray.html  ADate.html  ANumeric.html  ATStamp.html  ATime.html  AssParse.html  AttrParse.html  AttrVal.html  Attribute.html  BrowserDlg.html  CRegExp.html  DirSrch.html  Entity.html  File.html  FileRExp.html  Handle.html  IDirSrch.html  INIFile.html  IVIOAppl.html  Log.html  Makefile.am  Mutex.html  Parse.html  PathDirSrch.html  PathSrch.html  Process.html  RDirSrch.html  RDirSrchSrv.html  RegExp.html  RemoteFile.html  SmartPtr.html  Socket.html  Thread.html  Tokenize.html  XAbout.html  XApplication.html  XAttrEntry.html  XAttrLabel.html  XDate.html  XDialog.html  (+14 more)
po/: .gitignore  Makevars  POTFILES.in  de.po  en.po  es.po
