## Process this file with automake to produce Makefile.in

SUBDIRS=.

EXTRA_DIST=AByteArray.html.en CRegExp.html.en Log.html.en SmartPtr.html.en \
           ADate.html.en Makefile.am Socket.html.en ANumeric.html.en \
           DirSrch.html.en  Parse.html.en Tokenize.html.en ATStamp.html.en \
	   File.html.en PathDirSrch.html.en XStrBuf.html.en ATime.html.en \
	   FileRExp.html.en PathSrch.html.en XStream.html.en AssParse.html.en \
           Handle.html.en RDirSrch.html.en AttrParse.html.en IDirSrch.html.en \
	   RDirSrchSrv.html.en cross_index.html AttrVal.html.en
	   INIFile.html.en RegExp.html.en Attribute.html.en IVIOAppl.html.en \
	   RemoteFile.html.en index.html
