## Process this file with automake to produce Makefile.in

SUBDIRS=.

EXTRA_DIST=AByteArray.html ADate.html ANumeric.html ATStamp.html ATime.html\
	   AssParse.html AttrParse.html AttrVal.html Attribute.html\
	   CRegExp.html DirSrch.html File.html FileRExp.html Handle.html\
	   IDirSrch.html INIFile.html IVIOAppl.html Log.html Parse.html\
	   PathDirSrch.html PathSrch.html RDirSrch.html RDirSrchSrv.html\
	   RegExp.html RemoteFile.html SmartPtr.html Socket.html Tokenize.html\
	   XStrBuf.html XStream.html cross_index.html index.html mdocu.html\
	   XAbout.html XApplication.html XDate.html XFileDlg.html \
	   XFileEntry.html
